set(dir ${CMAKE_CURRENT_SOURCE_DIR})

set(FSTRING_SOURCES
    ${dir}/strings.f90
)
set(FSTRING_SOURCES ${FSTRING_SOURCES} PARENT_SCOPE)

add_library(${PROJECT_NAME} ${FSTRING_SOURCES})

set_target_properties(
    ${PROJECT_NAME}
    PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    WINDOWS_EXPORT_ALL_SYMBOLS ON
)

set(FSTRING_MOD_DIR ${CMAKE_CURRENT_BINARY_DIR}/mod_files/)
if (NOT EXISTS "${FSTRING_MOD_DIR}")
    file(MAKE_DIRECTORY "${FSTRING_MOD_DIR}")
endif()

set_target_properties(
    ${PROJECT_NAME} PROPERTIES
    Fortran_MODULE_DIRECTORY ${FSTRING_MOD_DIR}
)
target_include_directories(
    ${PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${FSTRING_MOD_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_MODULEDIR}>
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}-targets
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
install(DIRECTORY ${FSTRING_MOD_DIR} DESTINATION "${CMAKE_INSTALL_MODULEDIR}")